bk_ida/gccida/c0/insn_extract
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:848:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat = ( rtx *)insn[2]; 
              ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:849:12: error: expected expression
*( _OWORD *)&recog_data_0.operand[28] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:849:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&recog_data_0.operand[28] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:849:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( _OWORD *)&recog_data_0.operand[28] = 0LL; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:850:12: error: expected expression
*( _OWORD *)&recog_data_0.operand[26] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:850:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&recog_data_0.operand[26] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:850:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( _OWORD *)&recog_data_0.operand[26] = 0LL; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:851:12: error: expected expression
*( _OWORD *)&recog_data_0.operand[24] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:851:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&recog_data_0.operand[24] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:851:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( _OWORD *)&recog_data_0.operand[24] = 0LL; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:852:12: error: expected expression
*( _OWORD *)&recog_data_0.operand[22] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:852:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&recog_data_0.operand[22] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:852:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( _OWORD *)&recog_data_0.operand[22] = 0LL; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:853:12: error: expected expression
*( _OWORD *)&recog_data_0.operand[20] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:853:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&recog_data_0.operand[20] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:853:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( _OWORD *)&recog_data_0.operand[20] = 0LL; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:854:12: error: expected expression
*( _OWORD *)&recog_data_0.operand[18] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:854:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&recog_data_0.operand[18] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/insn-extract.c:854:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( _OWORD *)&recog_data_0.operand[18] = 0LL; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_extract/src/obj/insn-extract.o] Error 1
